--- a/.github/workflows/sandbox.yaml
+++ b/.github/workflows/sandbox.yaml
@@ -21,6 +21,7 @@ jobs:
           BRANCH_NAME: ${{ github.ref_name }}
         run: |
           NAME=$(echo $BRANCH_NAME | tr -d '[:punct:]' | tr '[:upper:]' '[:lower:]')
+          NAME=sandbox
           echo "name=$NAME" >> $GITHUB_OUTPUT
 
       - uses: ./.github/actions/credentials
