--- a/.github/workflows/sandbox.yaml
+++ b/.github/workflows/sandbox.yaml
@@ -42,10 +42,14 @@ jobs:
         run: |
           . use-pscale-docker-image.sh
 
-          pscale branch delete "$DB_NAME" "$BRANCH_NAME" --org "$ORG_NAME" --force
-          pscale branch create "$DB_NAME" "$BRANCH_NAME" --org "$ORG_NAME" --wait
+          BRANCH_EXISTS=$(pscale branch list "$DB_NAME" --org "$ORG_NAME" --format json | jq -r ".[] | select(.name == \"$BRANCH_NAME\") | .name")
+          if [ "$BRANCH_EXISTS" == "$BRANCH_NAME" ]; then
+            echo "Branch $BRANCH_NAME already exists"
+          else
+            pscale branch create "$DB_NAME" "$BRANCH_NAME" --org "$ORG_NAME" --wait
+          fi
 
-          raw_db_url=$(pscale password create "$DB_NAME" "$BRANCH_NAME" "$CREDS" --org "$ORG_NAME" --format json)
+          raw_db_url=$(pscale password create "$DB_NAME" "$BRANCH_NAME" MySandBoxPassword --org "$ORG_NAME" --format json)
           DATABASE_URL=`echo "$raw_db_url" |  jq -r ". | \"mysql://\" + .username +  \":\" + .plain_text +  \"@\" + .database_branch.access_host_url + \"/\""`
 
           echo "DATABASE_URL=$DATABASE_URL" >> $GITHUB_OUTPUT
