--- a/.github/workflows/sandbox.yaml
+++ b/.github/workflows/sandbox.yaml
@@ -43,10 +43,11 @@ jobs:
           . use-pscale-docker-image.sh
 
           BRANCH_EXISTS=$(pscale branch list "$DB_NAME" --org "$ORG_NAME" --format json | jq -r ".[] | select(.name == \"$BRANCH_NAME\") | .name")
+          echo $BRANCH_EXISTS
           if [ "$BRANCH_EXISTS" == "$BRANCH_NAME" ]; then
             echo "Branch $BRANCH_NAME already exists"
           else
-            pscale branch create "$DB_NAME" "$BRANCH_NAME" --org "$ORG_NAME" --wait
+            pscale branch create $DB_NAME $BRANCH_NAME --org "$ORG_NAME" --wait
           fi
 
           raw_db_url=$(pscale password create "$DB_NAME" "$BRANCH_NAME" MySandBoxPassword --org "$ORG_NAME" --format json)
