--- a/.github/workflows/sandbox.yaml
+++ b/.github/workflows/sandbox.yaml
@@ -43,7 +43,7 @@ jobs:
           . use-pscale-docker-image.sh
 
           BRANCH_EXISTS=$(pscale branch list "$DB_NAME" --org "$ORG_NAME" --format json | jq -r ".[] | select(.name == \"$BRANCH_NAME\") | .name")
-          echo $BRANCH_EXISTS
+          echo $BRANCH_NAME $BRANCH_EXISTS
           if [ "$BRANCH_EXISTS" == "$BRANCH_NAME" ]; then
             echo "Branch $BRANCH_NAME already exists"
           else
