--- a/.github/workflows/sandbox.yaml
+++ b/.github/workflows/sandbox.yaml
@@ -42,8 +42,9 @@ jobs:
         run: |
           . use-pscale-docker-image.sh
 
-          BRANCH_EXISTS=$(pscale branch list "$DB_NAME" --org "$ORG_NAME" --format json | jq -r ".[] | select(.name == \"$BRANCH_NAME\") | .name")
-          echo $BRANCH_NAME $BRANCH_EXISTS
+          BRANCHES=$(pscale branch list "$DB_NAME" --org "$ORG_NAME" --format json)
+          BRANCH_EXISTS=echo $BRANCHES | jq -r ".[] | select(.name == \"$BRANCH_NAME\") | .name")
+          echo $BRANCHES $BRANCH_NAME $BRANCH_EXISTS
           if [ "$BRANCH_EXISTS" == "$BRANCH_NAME" ]; then
             echo "Branch $BRANCH_NAME already exists"
           else
