--- a/.github/workflows/sandbox.yaml
+++ b/.github/workflows/sandbox.yaml
@@ -44,15 +44,20 @@ jobs:
 
           pscale auth login
 
-          BRANCHES=$(pscale branch list "$DB_NAME" --org "$ORG_NAME" --format json)
-          BRANCH_EXISTS=$(echo $BRANCHES | jq -r ".[] | select(.name == \"$BRANCH_NAME\") | .name")
+          BRANCH_EXISTS=$(pscale branch list "$DB_NAME" --org "$ORG_NAME" --format json | jq -r ".[] | select(.name == \"$BRANCH_NAME\") | .name")
           if [ "$BRANCH_EXISTS" == "$BRANCH_NAME" ]; then
             echo "Branch $BRANCH_NAME already exists"
           else
             pscale branch create $DB_NAME $BRANCH_NAME --org "$ORG_NAME" --wait
           fi
 
-          raw_db_url=$(pscale password create "$DB_NAME" "$BRANCH_NAME" my-sandbox-password --org "$ORG_NAME" --format json)
+          PASSWORD_NAME=sandbox
+          PASSWORD_EXISTS=$(pscale password list "$DB_NAME" "$BRANCH_NAME" --org "$ORG_NAME" --format json | jq -r ".[] | select(.name == \"$PASSWORD_NAME\") | .name")
+          if [ "$PASSWORD_EXISTS" == "$PASSWORD_NAME" ]; then
+              echo "Deleting password $PASSWORD_NAME."
+              pscale password delete "$DB_NAME" "$BRANCH_NAME" $PASSWORD_NAME --org "$ORG_NAME" --force
+          fi
+          raw_db_url=$(pscale password create "$DB_NAME" "$BRANCH_NAME" "$PASSWORD_NAME" --org "$ORG_NAME" --format json)
           DATABASE_URL=`echo "$raw_db_url" |  jq -r ". | \"mysql://\" + .username +  \":\" + .plain_text +  \"@\" + .database_branch.access_host_url + \"/\""`
 
           echo "DATABASE_URL=$DATABASE_URL" >> $GITHUB_OUTPUT
