--- a/.github/workflows/on-pr.yaml
+++ b/.github/workflows/on-pr.yaml
@@ -8,7 +8,14 @@ on:
 jobs:
   ci:
     uses: ./.github/workflows/ci.yaml
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}
+      cancel-in-progress: true
 
   sandbox:
     uses: ./.github/workflows/sandbox.yaml
     if: github.event.pull_request.draft == false
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}
+      cancel-in-progress: false
+    needs: [ci]
