--- a/.github/workflows/on-push.yaml
+++ b/.github/workflows/on-push.yaml
@@ -6,7 +6,7 @@ on:
       - main
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
+  group: continuous-delivery-pipeline
   cancel-in-progress: false
 
 jobs:
