--- a/.github/workflows/on-push.yaml
+++ b/.github/workflows/on-push.yaml
@@ -13,7 +13,11 @@ jobs:
   ci:
     uses: ./.github/workflows/ci.yaml
 
-  cd:
+  sandbox:
+    uses: ./.github/workflows/sandbox.yaml
     needs: [ci]
+
+  cd:
+    needs: [sandbox]
     uses: ./.github/workflows/cd.yaml
     secrets: inherit
