--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -18,6 +18,7 @@ jobs:
       - uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: 1.4.4
+          terraform_wrapper: false
 
       - uses: actions/download-artifact@v3
         with:
