--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -13,6 +13,13 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Authenticate on PlanetScale
+        working-directory: .pscale/cli-helper-scripts
+        shell: bash
+        run: |
+          . use-pscale-docker-image.sh
+          pscale auth login
+
       - uses: ./.github/actions/credentials
 
       - uses: hashicorp/setup-terraform@v2
@@ -24,8 +31,19 @@ jobs:
         with:
           name: build
 
+      - id: paths
+        uses: ./.github/actions/create_pscale_db_branch_password
+        with:
+          db_name: realworld-app
+          org_name: santunioni
+          branch_name: main
+
+      - id: dburl
+        shell: bash
+        run: echo "DATABASE_URL=$(aws ssm get-parameter --name ${{ steps.paths.outputs.URL_PATH }} --with-decryption --query "Parameter.Value" --output text)" >> $GITHUB_OUTPUT
+
       - id: terraform
         run: make aws/terraform
         env:
-          TF_VAR_DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          TF_VAR_DATABASE_URL: ${{ steps.dburl.outputs.DATABASE_URL }}
           TF_VAR_ENVIRONMENT: production
