--- a/.github/workflows/sandbox.yaml
+++ b/.github/workflows/sandbox.yaml
@@ -26,6 +26,15 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Authenticate on PlanetScale
+        working-directory: .pscale/cli-helper-scripts
+        shell: bash
+        run: |
+          . use-pscale-docker-image.sh
+          pscale auth login
+
+      - uses: ./.github/actions/credentials
+
       - id: environment
         env:
           BRANCH_NAME: ${{ github.ref_name }}
@@ -34,33 +43,24 @@ jobs:
           NAME=sandbox
           echo "name=$NAME" >> $GITHUB_OUTPUT
 
-      - uses: ./.github/actions/credentials
+      - name: Create DB Branch
+        uses: ./.github/actions/create_pscale_db_branch
+        with:
+          db_name: realworld-app
+          org_name: santunioni
+          branch_name: sandbox
 
-      - name: Create DB branch and deploy request- if asked, please click on displayed link to authenticate
-        id: database
-        timeout-minutes: 3
-        env:
-          BRANCH_NAME: ${{ steps.environment.outputs.name }}
-        working-directory: ${{ env.pscale_base_directory }}/cli-helper-scripts/
-        run: |
-          . use-pscale-docker-image.sh
+      - id: paths
+        name: Create DB Branch Password
+        uses: ./.github/actions/create_pscale_db_branch_password
+        with:
+          db_name: realworld-app
+          org_name: santunioni
+          branch_name: sandbox
 
-          pscale auth login
-
-          BRANCH_EXISTS=$(pscale branch list "$DB_NAME" --org "$ORG_NAME" --format json | jq -r ".[] | select(.name == \"$BRANCH_NAME\") | .name")
-          if [ "$BRANCH_EXISTS" != "$BRANCH_NAME" ]; then
-            pscale branch create $DB_NAME $BRANCH_NAME --org "$ORG_NAME" --wait
-          fi
-
-          PASSWORD_NAME=sandbox
-          PASSWORD_ID=$(pscale password list "$DB_NAME" "$BRANCH_NAME" --org "$ORG_NAME" --format json | jq -r ".[] | select(.name == \"$PASSWORD_NAME\") | .id")
-          if [ -n "$PASSWORD_ID" ]; then
-              pscale password delete "$DB_NAME" "$BRANCH_NAME" "$PASSWORD_ID" --org "$ORG_NAME" --force
-          fi
-          raw_db_url=$(pscale password create "$DB_NAME" "$BRANCH_NAME" "$PASSWORD_NAME" --org "$ORG_NAME" --format json)
-          DATABASE_URL=$(echo "$raw_db_url" |  jq -r ". | \"mysql://\" + .username +  \":\" + .plain_text +  \"@\" + .database_branch.access_host_url + \"/$DB_NAME\"")
-
-          echo "DATABASE_URL=$DATABASE_URL" >> $GITHUB_OUTPUT
+      - id: dburl
+        shell: bash
+        run: echo "DATABASE_URL=$(aws ssm get-parameter --name ${{ steps.paths.outputs.URL_PATH }} --with-decryption --query "Parameter.Value" --output text)" >> $GITHUB_OUTPUT
 
       - uses: actions/setup-node@v3
         with:
@@ -80,7 +80,7 @@ jobs:
         shell: bash
         name: Migrations
         env:
-          DATABASE_URL: ${{ steps.database.outputs.DATABASE_URL }}
+          DATABASE_URL: ${{ steps.dburl.outputs.DATABASE_URL }}
 
       - name: Download build
         uses: actions/download-artifact@v3
@@ -94,7 +94,7 @@ jobs:
           cd terraform
           echo "API_GATEWAY_URL=$(terraform output API_GATEWAY_URL | jq -r)" >> $GITHUB_OUTPUT
         env:
-          TF_VAR_DATABASE_URL: ${{ steps.database.outputs.DATABASE_URL }}
+          TF_VAR_DATABASE_URL: ${{ steps.dburl.outputs.DATABASE_URL }}
           TF_VAR_ENVIRONMENT: ${{ steps.environment.outputs.name }}
 
       - name: Wait Sandbox
