chore: pass created DATABASE_URL

--- a/.github/actions/create_pscale_db_branch_password/action.yaml
+++ b/.github/actions/create_pscale_db_branch_password/action.yaml
@@ -62,3 +62,4 @@ runs:
 
         echo "ID_PATH=$ID_PATH" >> $GITHUB_OUTPUT
         echo "URL_PATH=$URL_PATH" >> $GITHUB_OUTPUT
+        echo "DATABASE_URL=$URL" >> $GITHUB_OUTPUT
