fix: action return

--- a/.github/actions/create_pscale_db_branch_password/action.yaml
+++ b/.github/actions/create_pscale_db_branch_password/action.yaml
@@ -26,6 +26,9 @@ outputs:
   URL_PATH:
     value: ${{ steps.password.outputs.URL_PATH }}
     description: The URL Path
+  DATABASE_URL:
+    value: ${{ steps.password.outputs.DATABASE_URL }}
+    description: The Database URL
 
 runs:
   using: 'composite'
