--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -22,6 +22,23 @@ jobs:
 
       - uses: ./.github/actions/credentials
 
+      - id: dburl
+        uses: ./.github/actions/create_pscale_db_branch_password
+        with:
+          db_name: realworld-app
+          org_name: santunioni
+          branch_name: main
+
+      - run: npm install
+        shell: bash
+        name: Dependencies
+
+      - run: npm run migration:run
+        shell: bash
+        name: Migrations
+        env:
+          DATABASE_URL: ${{ steps.dburl.outputs.DATABASE_URL }}
+
       - uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: 1.4.4
@@ -30,13 +47,6 @@ jobs:
       - uses: actions/download-artifact@v3
         with:
           name: build
-
-      - id: dburl
-        uses: ./.github/actions/create_pscale_db_branch_password
-        with:
-          db_name: realworld-app
-          org_name: santunioni
-          branch_name: main
 
       - id: terraform
         run: make aws/terraform
