chore: use token to authenticate on pscale

--- a/.github/actions/credentials/action.yaml
+++ b/.github/actions/credentials/action.yaml
@@ -8,3 +8,10 @@ runs:
       with:
         role-to-assume: arn:aws:iam::814320462898:role/iac
         aws-region: us-east-1
+
+    - name: Authenticate on PlanetScale
+      working-directory: .pscale/cli-helper-scripts
+      shell: bash
+      run: |
+        . use-pscale-docker-image.sh
+        pscale auth login --service-token-id ${{ secrets.PLANETSCALE_TOKEN_ID }} --service-token ${{ secrets.PLANETSCALE_TOKEN }}
