--- a/.github/actions/credentials/action.yaml
+++ b/.github/actions/credentials/action.yaml
@@ -1,6 +1,14 @@
 name: Credentials
 description: Configure AWS and PlanetScale Credentials
 
+inputs:
+  PLANETSCALE_TOKEN_ID:
+    description: ''
+    required: true
+  PLANETSCALE_TOKEN:
+    description: ''
+    required: true
+
 runs:
   using: composite
   steps:
@@ -14,4 +22,4 @@ runs:
       shell: bash
       run: |
         . use-pscale-docker-image.sh
-        pscale auth login --service-token-id ${{ secrets.PLANETSCALE_TOKEN_ID }} --service-token ${{ secrets.PLANETSCALE_TOKEN }}
+        pscale auth login --service-token-id ${{ inputs.PLANETSCALE_TOKEN_ID }} --service-token ${{ inputs.PLANETSCALE_TOKEN }}
