--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -14,6 +14,9 @@ jobs:
       - uses: actions/checkout@v3
 
       - uses: ./.github/actions/credentials
+        with:
+          PLANETSCALE_TOKEN_ID: ${{ secrets.PLANETSCALE_TOKEN_ID }}
+          PLANETSCALE_TOKEN: ${{ secrets.PLANETSCALE_TOKEN }}
 
       - id: dburl
         uses: ./.github/actions/create_pscale_db_branch_password
