--- a/.github/workflows/sandbox.yaml
+++ b/.github/workflows/sandbox.yaml
@@ -27,6 +27,9 @@ jobs:
       - uses: actions/checkout@v3
 
       - uses: ./.github/actions/credentials
+        with:
+          PLANETSCALE_TOKEN_ID: ${{ secrets.PLANETSCALE_TOKEN_ID }}
+          PLANETSCALE_TOKEN: ${{ secrets.PLANETSCALE_TOKEN }}
 
       - id: environment
         env:
