--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^4.4.1",
     "rxjs": "^7.8.0",
-    "typeorm": "0.3.12",
+    "typeorm": "^0.3.15",
     "typeorm-naming-strategies": "^4.1.0",
     "zod": "^3.21.4",
     "zod-to-json-schema": "^3.20.4"
