--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -7,6 +7,10 @@ permissions:
   id-token: write
   contents: read
 
+env:
+  PLANETSCALE_SERVICE_TOKEN_ID: ${{ secrets.PLANETSCALE_SERVICE_TOKEN_ID }}
+  PLANETSCALE_SERVICE_TOKEN: ${{ secrets.PLANETSCALE_SERVICE_TOKEN }}
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -14,9 +18,6 @@ jobs:
       - uses: actions/checkout@v3
 
       - uses: ./.github/actions/credentials
-        with:
-          PLANETSCALE_TOKEN_ID: ${{ secrets.PLANETSCALE_TOKEN_ID }}
-          PLANETSCALE_TOKEN: ${{ secrets.PLANETSCALE_TOKEN }}
 
       - id: dburl
         uses: ./.github/actions/create_pscale_db_branch_password
