--- a/.github/workflows/sandbox.yaml
+++ b/.github/workflows/sandbox.yaml
@@ -5,6 +5,8 @@ env:
   DB_NAME: realworld-app
   GITHUB_USER: ${{ github.actor }}
   ORG_NAME: santunioni
+  PLANETSCALE_SERVICE_TOKEN_ID: ${{ secrets.PLANETSCALE_SERVICE_TOKEN_ID }}
+  PLANETSCALE_SERVICE_TOKEN: ${{ secrets.PLANETSCALE_SERVICE_TOKEN }}
 
 on:
   workflow_call:
@@ -27,9 +29,6 @@ jobs:
       - uses: actions/checkout@v3
 
       - uses: ./.github/actions/credentials
-        with:
-          PLANETSCALE_TOKEN_ID: ${{ secrets.PLANETSCALE_TOKEN_ID }}
-          PLANETSCALE_TOKEN: ${{ secrets.PLANETSCALE_TOKEN }}
 
       - id: environment
         env:
