--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "author": "Vinícius Vargas",
   "private": false,
   "license": "MIT",
-  "scripts": {
-  },
+  "scripts": {},
   "devDependencies": {
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
