chore: run prettier

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "author": "Vinícius Vargas",
   "private": false,
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "format": "prettier --write ."
+  },
   "devDependencies": {
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
