chore: run typecheck

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -38,7 +38,9 @@ jobs:
         run: npx prettier --check .
 
       - name: Typescript
-        run: npx tsc --noEmit
+        run: |
+          npm run typecheck --workspace packages/server
+          npm run typecheck --workspace packages/acceptance
 
       - run: |
           npm run migration:run --workspace packages/server
