--- a/packages/acceptance/package.json
+++ b/packages/acceptance/package.json
@@ -9,7 +9,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@packages/server": "0.0.1"
+    "@packages/server": "0.0.1",
+    "@trpc/client": "^10.20.0"
   },
   "devDependencies": {},
   "jest": {
