--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -15,7 +15,7 @@
     "typecheck": "tsc --noEmit",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "openapi": "ts-node src/nest/openapi.ts",
-    "typeorm": "ts-node --transpile-only ./node_modules/.bin/typeorm --dataSource ./ormconfig.ts",
+    "typeorm": "ts-node --compilerOptions '{\"emitDecoratorMetadata\":true,\"experimentalDecorators\":true,\"target\":\"es6\"}' --transpile-only $(which typeorm) --dataSource ./ormconfig.ts",
     "migration:run": "npm run typeorm migration:run",
     "migration:generate": "npm run typeorm migration:generate",
     "migration:revert": "npm run typeorm migration:revert",
@@ -30,7 +30,6 @@
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.3.12",
     "@nestjs/swagger": "^6.3.0",
-    "@trpc/client": "^10.20.0",
     "@trpc/server": "^10.20.0",
     "aws-lambda": "^1.0.7",
     "aws-serverless-express": "^3.4.0",
@@ -42,7 +41,6 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mysql": "^2.18.1",
-    "node-fetch": "^3.3.1",
     "passport": "^0.6.0",
     "passport-http": "^0.3.0",
     "passport-jwt": "^4.0.1",
