fix: upload build lambda path

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -75,4 +75,4 @@ jobs:
         with:
           name: build
           path: |
-            terraform/lambda.zip
+            packages/server/terraform/lambda.zip
