--- a/.github/workflows/on-push.yaml
+++ b/.github/workflows/on-push.yaml
@@ -12,13 +12,9 @@ concurrency:
 jobs:
   ci:
     uses: ./.github/workflows/ci.yaml
-
-  sandbox:
-    uses: ./.github/workflows/sandbox.yaml
-    needs: [ci]
     secrets: inherit
 
   cd:
-    needs: [sandbox]
+    needs: ci
     uses: ./.github/workflows/cd.yaml
     secrets: inherit
