--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,7 +5,10 @@ on:
 
 jobs:
   checks:
+    name: Checks
+
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v3
 
@@ -114,6 +117,7 @@ jobs:
     defaults:
       run:
         shell: bash
+
     steps:
       - uses: actions/checkout@v3
 
@@ -216,3 +220,17 @@ jobs:
           pscale branch delete $DB_NAME $BRANCH_NAME --org $ORG_NAME --force
         env:
           BRANCH_NAME: ${{ steps.environment.outputs.name }}
+
+  checkpackage:
+    runs-on: ubuntu-latest
+    needs: [lambda]
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/download-artifact@v3
+        with:
+          name: build
+      - uses: actions/download-artifact@v3
+        with:
+          name: build
+          path: packages/server/terraform
+      - run: tree -L 5
