chore: clear ephemeral

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -1,4 +1,6 @@
-name: Deploy
+name: Continuous Deployment
+
+run-name: Deployment
 
 on:
   workflow_call:
@@ -42,11 +44,9 @@ jobs:
           terraform_wrapper: false
 
       - uses: actions/download-artifact@v3
-        id: download
         with:
           name: build
-
-      - run: mv ${{ steps.download.outputs.download-path }}/lambda.zip packages/server/terraform/lambda.zip
+          path: packages/server/terraform
 
       - id: terraform
         name: Deploy ${{ steps.environment.outputs.name }}
